切換語言“英文”改為-》“English”

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -119,7 +119,7 @@
     <string name="app_need_update">您的應用需要更新，點擊"確定"開始更新</string>
     <string name="address_over_quantity">您添加的地址已超過一百筆，請刪除後繼續添加</string>
     <string name="language_chinese_simplified">中文(簡體)</string>
-    <string name="lauguage_english">英文</string>
+    <string name="lauguage_english">English</string>
     <string name="language_chinese_traditional">中文(繁體)</string>
     <string name="brand_info">COPYRIGHT @ BCAAS,INC. ALL RIGHTS RESERVED</string>
 
