--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -119,7 +119,7 @@
     <string name="app_need_update">您的应用需要更新，点击"确定"开始更新</string>
     <string name="address_over_quantity">您添加的地址已超过一百笔，请删除后继续添加</string>
     <string name="language_chinese_simplified">中文(简体)</string>
-    <string name="lauguage_english">英文</string>
+    <string name="lauguage_english">English</string>
     <string name="language_chinese_traditional">中文(繁体)</string>
     <string name="brand_info">COPYRIGHT @ BCAAS,INC. ALL RIGHTS RESERVED</string>
 
