服務器返回的交易時間界面顯示轉化為當前對應的時間

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,5 +163,6 @@
     <string name="data_str">Date</string>
     <string name="account_str">Account</string>
     <string name="amount_str">Amount</string>
+    <string name="three_place_holders">%s %s %s</string>
 
 </resources>
