--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="on_transaction">Trading is currently under way, please do not quit</string>
     <string name="please_enter_transaction_amount">Please enter transaction amount</string>
     <string name="successfully_copied">Successfully copied</string>
-    <string name="confirm_delete">Confirm delete</string>
+    <string name="confirm_delete">Confirm delete？</string>
     <string name="no_account_address_add">No account address for collection, please add</string>
     <string name="password_rule"><![CDATA[0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM!@#¥%^&*-_]]></string>
 
