--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="double_click_for_exit">Press the return button again to exit the program</string>
     <string name="no_account_address_to_choose_from">Currently, there is no account address to choose from</string>
 
-    <string name="transaction_to">To %s  </string>
+    <string name="transaction_to" formatted="false" >To %s  </string>
     <string name="authorized_representative_address">Authorized representative account address</string>
     <string name="wallet_info">Wallet information</string>
     <string name="private_key">Private key</string>
@@ -126,7 +126,7 @@
     <string name="language_chinese_traditional">Chinese(Traditional)</string>
     <string name="brand_info">COPYRIGHT @ BCAAS,INC. ALL RIGHTS RESERVED</string>
 
-    <string name="tv_transaction_detail">%s %s</string>
+    <string name="tv_transaction_detail" formatted="false" >%s %s</string>
 
 
     <!--translate fifth-->
@@ -164,8 +164,8 @@
     <string name="data_str">Date</string>
     <string name="account_str">Account</string>
     <string name="amount_str">Amount</string>
-    <string name="three_place_holders">%s %s %s</string>
-    <string name="two_place_holders">%s %s</string>
+    <string name="three_place_holders" formatted="false" >%s %s %s</string>
+    <string name="two_place_holders" formatted="false" >%s %s</string>
     <string name="updating">Updating, please do not quit</string>
 
 
@@ -184,7 +184,7 @@
 
     <!--TV Guide-->
     <string name="guide_dot_to_switch_language">Click to switch language</string>
-    <string name="receive_block_notification">%s received:</string>
+    <string name="receive_block_notification" formatted="false" >%s received:</string>
     <string name="amount_input_error">Amount input error</string>
     <string name="transaction_cannot_be_zero">Transaction quantity cannot be zero</string>
 
