--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -152,14 +152,19 @@
     <string name="hide">隐藏</string>
     <string name="amount_edit_digits">1234567890.</string>
     <string name="browse">总览</string>
-
+    <string name="data_str">Date</string>
+    <string name="account_str">Account</string>
+    <string name="amount_str">Amount</string>
+    <string name="three_place_holders" formatted="false" >%s %s %s</string>
+    <string name="two_place_holders" formatted="false" >%s %s</string>
+    <string name="updating">Updating, please do not quit</string>
     <!--TV END-->
 
     <string name="next">下一步</string>
     <string name="yes">知道了</string>
-    <string name="input_correct_password_unlock">输入创建钱包时的设置的密码，以解锁当前手机里的BCAAS钱包</string>
-    <string name="touch_can_create_new_wallet">还未创建BCAAS钱包？可点击生成一个新钱包</string>
-    <string name="can_import_wallet">已经在别处创建过BCAAS钱包？可以通过输入私钥的方式导入钱包</string>
+    <string name="input_correct_password_unlock">输入创建钱包时的设置的密码，以解锁当前手机里的BCAAS钱包。</string>
+    <string name="touch_can_create_new_wallet">还未创建BCAAS钱包？可点击生成一个新钱包。</string>
+    <string name="can_import_wallet">已经在别处创建过BCAAS钱包？可以通过输入私钥的方式导入钱包。</string>
     <string name="touch_copy_your_wallet_address">点击可复制您的账户地址</string>
     <string name="touch_number_can_show_complete_amount">点击数字可显示全部金额</string>
     <string name="touch_can_change_blockservice">点击可切换积分单位</string>
