"success":false,"code":2097,"message":"The balance data is synchronizing.","methodName":"getBalance_SC","size":0}添加资料同步中

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -181,4 +181,8 @@
 
     <string name="server_busy">当前服务器繁忙,请稍后再试</string>
     <string name="no_notification_permission">检测到您没有打开通知权限，是否去打开</string>
+
+    <!--资料同步中-->
+    <string name="data_synchronizing">资料同步中</string>
+
 </resources>
