--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,7 +193,7 @@
     <string name="no_notification_permission">It is detected that you have not opened the notification permission, whether to open</string>
 
     <!--资料同步中-->
-    <string name="data_synchronizing">Data synchronizing</string>
+    <string name="data_synchronizing">Data synchronization</string>
 
 
 
