国内版已经同步当前国际版 2018/12/12   15:32

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -186,6 +186,7 @@
     <!--资料同步中-->
     <string name="data_synchronizing">资料同步中</string>
 
+    <!--交易记录详情页面-->
     <string name="copy_hash">复制交易号</string>
     <string name="transaction_time">交易时间</string>
     <string name="block">区块</string>
