--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,6 +194,8 @@
 
     <!--资料同步中-->
     <string name="data_synchronizing">Data synchronization</string>
+
+    <!--交易记录详情页面-->
     <string name="copy_hash">Copy hash</string>
     <string name="transaction_time">Transaction time</string>
     <string name="block">Block</string>
