--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,11 +196,12 @@
     <string name="data_synchronizing">Data synchronization</string>
 
     <!--交易记录详情页面-->
-    <string name="copy_hash">Copy hash</string>
-    <string name="transaction_time">Transaction time</string>
-    <string name="block">Block</string>
-    <string name="transaction_hash">Transaction hash</string>
-    <string name="send_account">Send amount</string>
+    <string name="copy_hash">Copy TxHash</string>
+    <string name="transaction_time">TimeStamp</string>
+    <string name="height">Height</string>
+    <string name="transaction_hash">TxHash</string>
+    <string name="to">To</string>
+    <string name="from">From</string>
 
 
 
