--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -193,4 +193,7 @@
     <string name="transaction_hash">TxHash</string>
     <string name="to">To</string>
     <string name="from">From</string>
+
+    <string name="check_balance">查看余额</string>
+
 </resources>
