--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -195,5 +195,8 @@
     <string name="from">From</string>
 
     <string name="check_balance">查看余额</string>
+    <string name="wait_select_currency">...</string>
+    <string name="please_choose">请选择</string>
+    <string name="transaction_detail">交易详情</string>
 
 </resources>
