--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -197,6 +197,8 @@
     <string name="check_balance">查看余额</string>
     <string name="wait_select_currency">...</string>
     <string name="please_choose">请选择</string>
+    <string name="select">请选择</string>
     <string name="transaction_detail">交易详情</string>
+    <string name="select_token_please">请先选择积分类型</string>
 
 </resources>
