添加APP_INSTALL_URL 这个开关，用来判断优先采用应用内还是应用外更新。且只是代表下载URL的优先下载顺序，其中一个URL下载失败都要在尝试另外一个。

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -204,5 +204,6 @@
     <string name="select_token_please">请先选择积分类型</string>
     <string name="done_tc">已完成</string>
     <string name="undone_tc">未完成</string>
-
+    <string name="illegal_download_url">非法的下载路径</string>
+    <string name="download_url_exception">下载路径异常</string>
 </resources>
